# Immersive-Camera-Simulator

./: .gitattributes  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/core/: config.py  job_store.py
backend/routers/: depth.py  health.py  reconstruct.py
backend/scripts/: download_model.py
backend/services/: colmap_service.py  depth_service.py  gaussian_service.py  pipeline.py  video_service.py
docs/: api.md  camera.md  roadmap.md  spec.md
frontend/: Dockerfile  env.d.ts  index.html  nginx.conf  package.json  tsconfig.json  tsconfig.node.json
frontend/src/: App.vue  style.css
frontend/src/components/ApertureRing/: ApertureRing.vue
frontend/src/components/CompareView/: CompareView.vue
frontend/src/components/DialWheel/: DialWheel.vue
frontend/src/components/LensSelector/: LensSelector.vue
frontend/src/components/SceneViewer/: SceneViewer.vue
frontend/src/components/TeachingHUD/: TeachingHUD.vue
frontend/src/components/UploadZone/: UploadZone.vue
frontend/src/components/VideoUpload/: VideoUpload.vue
frontend/src/components/Viewfinder/: Viewfinder.vue
frontend/src/composables/: useCompare.ts  useDepthMap.ts  useEffects.ts  useImageFX.ts  useReconstruct.ts  useScene.ts  useSensor.ts
frontend/src/data/: lenses.ts  sensors.ts
frontend/src/gpu/: pipeline.ts  textureUtils.ts
frontend/src/gpu/shaders/: blit.wgsl  bokeh.wgsl  exposure.wgsl  gaussian.wgsl  motionBlur.wgsl  noise.wgsl  vignette.wgsl
frontend/src/stores/: cameraStore.ts
