[project]
name = "camsim-backend"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pillow>=11.0",
    "numpy~=2.1",
    "python-multipart>=0.0.12",
    "aiofiles>=24.0",
    "pydantic-settings>=2.7",
    # System dependencies (not pip-installable, must be on PATH):
    #   ffmpeg  → https://ffmpeg.org/download.html
    #   colmap  → https://github.com/colmap/colmap/releases
    #
    # CUDA-only Python dependencies (install after torch):
    #   pip install torch torchvision --index-url https://download.pytorch.org/whl/cu124
    #   pip install gsplat
]

[tool.uv]
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
